feat: endpoint Listar Pacotes e detalhes de hotéis, DTOs, Testes unitários

--- a/ViagemImpacta/backend/ViagemImpacta/appsettings.json
+++ b/ViagemImpacta/backend/ViagemImpacta/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ViagemImpactConnection": "Server=(localdb)\\mssqllocaldb;Database=ViagemImpactaLocalDb_Teste;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+        "ViagemImpactConnection": "Server=AVAPC-254468973\\SQLEXPRESS;Database=ViagemImpactaLocalDb_Teste;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   }
 }
