--- a/ViagemImpacta/backend/ViagemImpacta/ViagemImpacta.csproj
+++ b/ViagemImpacta/backend/ViagemImpacta/ViagemImpacta.csproj
@@ -16,11 +16,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\ViewsControllers\" />
-    <Folder Include="DTO\" />
   </ItemGroup>
 
   <ItemGroup>
