--- a/ViagemImpacta/frontend/package.json
+++ b/ViagemImpacta/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.20.7",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^8.4.0",
