--- a/ViagemImpacta/backend/ViagemImpacta/appsettings.json
+++ b/ViagemImpacta/backend/ViagemImpacta/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ViagemImpactConnection": "Server=(localdb)\\mssqllocaldb;Database=VIagemImpactaDBTeste2;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "ViagemImpactConnection": "Server=AVAPC-254468973\\SQLEXPRESS;Database=VIagemImpactaDBTeste23;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    }
 }
