--- a/.github/workflows/main_tripz.yml
+++ b/.github/workflows/main_tripz.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build "ViagemImpacta/backend/ViagemImpacta/ViagemImpacta.csproj" --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish "ViagemImpacta/backend/ViagemImpacta/ViagemImpacta.csproj" -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -47,7 +47,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+        
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,4 +62,3 @@ jobs:
           app-name: 'tripz'
           slot-name: 'Production'
           package: .
-          
