--- a/.github/workflows/main_tripz.yml
+++ b/.github/workflows/main_tripz.yml
@@ -24,11 +24,11 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        working-directory: 'ViagemImpacta/backend'
+        working-directory: 'ViagemImpacta/ViagemImpacta/backend/ViagemImpacta'
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        working-directory: 'ViagemImpacta/backend'
+        working-directory: 'ViagemImpacta/ViagemImpacta/backend/ViagemImpacta'
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
