Fix: Corrigido problema do Google Maps API
- Adicionado debug logs para Google Maps API Key
- Configurado fallback para API Key de produção
- Documentado necessidade de autorizar domínio Azure no Google Cloud Console
- URL a ser autorizada: https://mango-mud-0485cd210.1.azurestaticapps.net

--- a/ViagemImpacta/frontend/.env.production
+++ b/ViagemImpacta/frontend/.env.production
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL=https://tripzback.azurewebsites.net/api
+# API Key temporária para desenvolvimento/teste - você deve criar sua própria para produção
 VITE_Maps_API_KEY=AIzaSyBadK9gu4sGIAHWhVCZ59sOBVHkFOicbkU
